--- a/styles/videos.css
+++ b/styles/videos.css
@@ -37,13 +37,13 @@
 
 @media (max-width: 750px) {
     .video-grid{
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
     }
 }
 
 @media (min-width: 751px) and (max-width: 999){
     .video-grid{
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
